# assistant_app

./: .gitignore  pyproject.toml
assistant_app/: decision_matrix.py  weekly_planner.py
assistant_app/data/: weekly_planner_data.yaml
