[tool.poetry]
name = "assistant-app"
version = "0.1.0"
description = ""
authors = ["Daniel Sinderson <drsinderson@gmail.com>"]
readme = "README.md"
packages = [{include = "assistant_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
